# Ammit

./: .gitignore  Readme.md  gen_heatmap.py
srcs/: csv.csv  driver.py
srcs/ContextualShape_Control/: ContextualShape_Control.c  config
srcs/decode/decode_bo/: config  decode_bo.c  decode_bo_OFF10.c  decode_bo_S1_D.c  decode_bo_S2.c  run_decode_bo.sh
srcs/decode/decode_bol/: config  decode_bol.c
srcs/decode/decode_sbr/: config  decode_sbr.c
srcs/decode/decode_sbrn/: config  (+1 more)
srcs/expandlex/: config  expandlex.c
srcs/fsp_attr_set_flags/: config  fsp_attr_set_flags.c
srcs/ifElse/: iterateNotNull.c  iterateNull.c
srcs/ifSwitch/: config  iterateNotNull.c  iterateNull.c
srcs/kiss_esc/: config  kiss_esc.c
srcs/mlx5e_build_tc_group/: config  mlx5e_build_tc_group.c  mlx5e_build_tc_group_123.c  mlx5e_build_tc_group_132.c  mlx5e_build_tc_group_213.c  mlx5e_build_tc_group_231.c  mlx5e_build_tc_group_312.c  mlx5e_build_tc_group_321.c  run_mlxe.sh
srcs/module_fixup/: config  module_fixup.c
srcs/ms_count_freeblock/: config  ms_count_freeblock.c
srcs/parse_args/: config  parse_args.c
srcs/parse_breakpoint_type/: config  parse_breakpoint_type.c
srcs/switch/: s0.c
srcs/trim_trailing_spaces/: config  trim_trailing_spaces.c
srcs/trng_match/: config  test  trng_match.c
srcs/union/: char_uint_doub.c  config  doub_char_uint.c  uint_doub_char.c  union.c
srcs/upgt_fw_copy/: config  upgt_fw_copy.c
switch-finder/: CMakeLists.txt
switch-finder/switch_finder/: CMakeLists.txt  SwitchFinder.cpp
switch-finder/test/: build.py  test.c  test.ll  test_out.ll
(+13 files in other folders)
